--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
-    "nodemon": "^3.1.7"
+    "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7",
+    "otp-generator": "^4.0.1",
+    "uuid": "^10.0.0"
   }
 }
